--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ typechain
 
 #Circom Build
 build_circuits
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
